# russus_launcher

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
packaging/: PKGBUILD  russus-launcher.desktop
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: github.rs  installer.rs  lib.rs  main.rs  state.rs
src/lib/: AppRow.svelte  SettingsPanel.svelte  types.ts
